# unicodecheck

./: .gitignore  Makefile  README.md  makedata.py  pyproject.toml  test.py
unicodecheck/: __main__.py  args.py  cli.py  core.py  utils.py
